tests/language_modules/17_math_module/invalid_semantics/math_boolean_argument.vf
module MathBooleanArgument

procedure main()
is
    let result_value: Double = Math.sqrt(true)
    check result_value = 1.0
end main

end MathBooleanArgument